# toy_proj

./: CMakeLists.txt  config.json  coordinator.py  main.cpp  main.py  run.sh  worker.py
